Backend Docker file added

--- a/BACKEND/Dockerfile
+++ b/BACKEND/Dockerfile
@@ -2,7 +2,7 @@ FROM node:14.17.3
 WORKDIR /app
 COPY . .
 ENV PG_PASSWORD fact123
-ENV PG_HOST 3.236.29.152
+ENV PG_HOST localhost
 ENV PG_PORT 5432
 ENV HOST localhost
 ENV PORT 5000
